--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', image: @image %>
 
-<%= link_to 'Back', images_path %>
+<br>
+<%= link_to 'Back', images_path, class:"btn btn-dark" %>
