--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.img-holder {
+    // background-color: #16191b;
+    width: 100%;
+    height: 472px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.img-title {
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+
+
+.desc {
+    font-size: 1em;
+}
