--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="input-group mb-3">
     <label class="input-group-text" for="inputGroupFile01">Upload</label>
-    <input type="file" class="form-control" id="inputGroupFile01">
+    <%= form.file_field :photo, class:"form-control", id:"inputGroupFile01" %>
   </div>
 
 
@@ -28,17 +28,10 @@
     <%= form.text_area :description, class:"form-control desc", placeholder:"Enter image description here", id:"imgDescription", style:"height:100px;" %>
     <label for="imgDescription">Description</label>
   </div>
-
   <div class="row mb-3">
-    <div class="col-sm">
-      <%= form.text_field :price, class:"form-control form-control-sm",  placeholder:"Enter price" %>
+    <div class="col-sm-2">
+      <%= form.number_field :user_id, id: :image_user_id, value: current_user.id, type: :hidden %>
     </div>
-  </div>
-  
-
-  <div class="field mb-3">
-    <%= form.label :private %>
-    <%= form.check_box :private %>
   </div>
 
   <div class="actions">
