--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -15,12 +15,12 @@
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <%   if image1 %>
         <%= link_to image1 do %>
-          <%= image_tag image1.photo, class:"w-100 shadow-1-strong rounded mb-4" %>
+          <%= image_tag image1.photo.variant(resize_to_limit: [475, nil]).processed, class:"w-100 shadow-1-strong rounded mb-4" %>
         <% end %>
       <% end %>
       <% if image2 %>
         <%= link_to image2 do %>
-          <%= image_tag image2.photo, class:"w-100 shadow-1-strong rounded mb-4" %>
+          <%= image_tag image2.photo.variant(quality: 70).processed, class:"w-100 shadow-1-strong rounded mb-4" %>
         <% end %>      
       <% end %>
     </div>
