--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -46,10 +46,17 @@
         
 
       </ul>
-    <%= form_tag images_path , :method => "get" do %>
-      <%= text_field_tag :search, params[:search], placeholder:"Search", class:"form-control me-2" %>
-      <%= submit_tag("Search", :name => nil, class:"btn btn-outline-success" ) %>
+
+    <%= form_tag(search_page_path, :method => "get",   
+        class: 'navbar-form navbar-left') do %>  
+      <div class="input-group">  
+        <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control me-2" %>  
+        <%= submit_tag("Search", :name => nil, class:"btn btn-outline-success" ) %> 
+      </div>  
     <% end %>
+
+
+   
     </div>
   </div>
 </nav>
